--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ahash = "0.8.12"
 anyhow = "1.0.93"
+arrayvec = "0.7.6"
 clap = { version = "4.5.21", features = ["derive"] }
 itertools = "0.14.0"
 seq-macro = "0.3.5"
 union-find = "0.4.3"
+z3 = "0.19.5"
